2007-02-13  Alan Modra  <amodra@bigpond.net.au>

	* ld-powerpc/relbrlt.d: Update.
	* ld-powerpc/tlsexe.r: Update.
	* ld-powerpc/tlsexetoc.r: Update.
	* ld-powerpc/tlsso.r: Update.
	* ld-powerpc/tlstocso.r: Update.

2007-02-12  Alan Modra  <amodra@bigpond.net.au>

	* ld-powerpc/relbrlt.d: Update.

2007-02-06  Nick Clifton  <nickc@redhat.com>

	PR ld/3805
	* ld-elf/sec64k.exp: Expect the relocatable version of this test
	to fail for the m32r because it creates both .rel and .rela
	sections.

2007-02-05  Dave Brolley  <brolley@redhat.com>

	* ld-undefined/undefined.exp: XFAIL the undefined test
	* ld-mep: New, with content.

2007-02-05  H.J. Lu  <hongjiu.lu@intel.com>

	* ld-i386/pcrel16.d: Undo the last change.
	* ld-x86-64/pcrel16.d: Likewise.

2007-02-02  H.J. Lu  <hongjiu.lu@intel.com>

	* ld-i386/pcrel16.d: Updated.
	* ld-x86-64/pcrel16.d: Likewise.

2007-02-01  Alan Modra  <amodra@bigpond.net.au>

	* ld-scripts/default-script.exp: Add "--local-store 0:0" to
	LDFLAGS for spu.

2007-01-29  Julian Brown  <julian@codesourcery.com>

	* ld-arm/arm-elf.exp: Add VFP11 tests.
	* ld-arm/vfp11-fix-none.s: New file.
	* ld-arm/vfp11-fix-none.d: Expected disassembly of above.
	* ld-arm/vfp11-fix-scalar.s: New file.
	* ld-arm/vfp11-fix-scalar.d: Expected disassembly of above.
	* ld-arm/vfp11-fix-vector.s: New file.
	* ld-arm/vfp11-fix-vector.d: Expected disassembly of above.

2007-01-23  Nathan Sidwell  <nathan@codesourcery.com>

	* ld-elf/header.d: Reduce page size, restrict to linux & vxworks
	* ld-elf/header.s: Adjust.
	* ld-elf/header.t: Reduce initial offset.

2007-01-23  Andreas Schwab  <schwab@suse.de>

	* lib/ld-lib.exp (run_dump_test): Don't prematurely remove
	assembler output.

2007-01-19  H.J. Lu  <hongjiu.lu@intel.com>

	* ld-elf/dl6.c: New file.
	* ld-elf/dl6a.out: Likewise.
	* ld-elf/dl6amain.c: Likewise.
	* ld-elf/dl6b.out: Likewise.
	* ld-elf/dl6bmain.c: Likewise.
	* ld-elf/dl6cmain.c: Likewise.
	* ld-elf/dl6dmain.c: Likewise.
